--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -13,6 +13,6 @@
         <url-pattern>/controller</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
-        <welcome-file>controller</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
