--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,5 @@
-#db.driver = com.mysql.jdbc.Driver
-#db.url = jdbc:mysql://localhost:3306/jwd_hostel?useSSL=false&serverTimezone=UTC
-#db.user = root
-#db.password = root
-#db.poolSize = 5
+db.driver =com.mysql.cj.jdbc.Driver
+db.url = jdbc:mysql://localhost:3306/jwd_hostel?useSSL=false&serverTimezone=UTC
+db.user = root
+db.password = root
+db.poolSize = 5
