--- a/src/main/resources/local.properties
+++ b/src/main/resources/local.properties
@@ -1,3 +1,10 @@
 local.locbutton.name.en = EN
 local.locbutton.name.ru = \u0420\u0443\u0441
 local.error.wrong_login_or_password = \u041D\u0435\u043F\u0440\u0430\u0432\u0438\u043B\u044C\u043D\u044B\u0439 \u043B\u043E\u0433\u0438\u043D \u0438\u043B\u0438 \u043F\u0430\u0440\u043E\u043B\u044C
+local.navigate.log_in_button = \u0412\u043E\u0439\u0442\u0438
+local.navigate.sign_up_button = \u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
+local.navigate.my_account = \u041C\u043E\u0439 \u0430\u043A\u043A\u0430\u0443\u043D\u0442
+local.navigate.my_account.menu.profile = \u041F\u0440\u043E\u0444\u0438\u043B\u044C
+local.navigate.my_account.menu.log_out_button = \u0412\u044B\u0439\u0442\u0438
+local.user.login = \u041B\u043E\u0433\u0438\u043D
+local.user.password = \u041F\u0430\u0440\u043E\u043B\u044C
