--- a/src/main/resources/local.properties
+++ b/src/main/resources/local.properties
@@ -1,6 +1,13 @@
 local.locbutton.name.en = EN
 local.locbutton.name.ru = \u0420\u0443\u0441
 local.error.wrong_login_or_password = \u041D\u0435\u043F\u0440\u0430\u0432\u0438\u043B\u044C\u043D\u044B\u0439 \u043B\u043E\u0433\u0438\u043D \u0438\u043B\u0438 \u043F\u0430\u0440\u043E\u043B\u044C
+local.error.login_is_present = \u041B\u043E\u0433\u0438\u043D \u0443\u0436\u0435 \u0437\u0430\u043D\u044F\u0442
+local.error.login_is_wrong = \u041B\u043E\u0433\u0438\u043D \u0434\u043E\u043B\u0436\u0435\u043D \u0431\u044B\u0442\u044C \u043E\u0442 3 \u0434\u043E 20 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432 1-9 0 A-z _
+local.error.password_is_wrong = \u041F\u0430\u0440\u043E\u043B\u044C \u0434\u043E\u043B\u0436\u0435\u043D \u0431\u044B\u0442\u044C \u043E\u0442 5 \u0434\u043E 20 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432 1-9 0 A-z _
+local.error.passwords_do_not_match = \u041F\u0430\u0440\u043E\u043B\u0438 \u043D\u0435 \u0441\u043E\u0432\u043F\u0430\u0434\u0430\u044E\u0442
+local.error.surname_is_wrong = \u041D\u0435\u043F\u0440\u0430\u0432\u0438\u043B\u044C\u043D\u044B\u0439 \u0432\u0432\u0435\u0434\u0435\u043D\u0430 \u0444\u0430\u043C\u0438\u043B\u0438\u044F
+local.error.name_is_wrong = \u041D\u0435\u043F\u0440\u0430\u0432\u0438\u043B\u044C\u043D\u044B\u0439 \u0432\u0432\u0435\u0434\u0435\u043D\u043E \u0438\u043C\u044F
+local.error.patronymic_is_wrong = \u041D\u0435\u043F\u0440\u0430\u0432\u0438\u043B\u044C\u043D\u043E \u0432\u0432\u0435\u0434\u0435\u043D\u043E \u043E\u0442\u0447\u0435\u0441\u0442\u0432\u043E
 local.navigate.log_in_button = \u0412\u043E\u0439\u0442\u0438
 local.navigate.sign_up_button = \u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
 local.navigate.my_account = \u041C\u043E\u0439 \u0430\u043A\u043A\u0430\u0443\u043D\u0442
@@ -8,3 +15,7 @@ local.navigate.my_account.menu.profile = \u041F\u0440\u043E\u0444\u0438\u043B\u0
 local.navigate.my_account.menu.log_out_button = \u0412\u044B\u0439\u0442\u0438
 local.user.login = \u041B\u043E\u0433\u0438\u043D
 local.user.password = \u041F\u0430\u0440\u043E\u043B\u044C
+local.user.password2 = \u041F\u043E\u0432\u0442\u043E\u0440\u0438\u0442\u0435 \u043F\u0430\u0440\u043E\u043B\u044C
+local.user.surname = \u0424\u0430\u043C\u0438\u043B\u0438\u044F
+local.user.name = \u0418\u043C\u044F
+local.user.patronymic = \u041E\u0442\u0447\u0435\u0441\u0442\u0432\u043E
