--- a/src/main/resources/local.properties
+++ b/src/main/resources/local.properties
@@ -1,6 +1,13 @@
 local.locbutton.name.en = EN
 local.locbutton.name.ru = \u0420\u0443\u0441
+local.table.action = \u0414\u0435\u0439\u0441\u0442\u0432\u0438\u0435
+local.action.add = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C
+local.action.edit = \u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C
+local.action.delete = \u0423\u0434\u0430\u043B\u0438\u0442\u044C
+local.action.select = \u0412\u044B\u0431\u0440\u0430\u0442\u044C
+local.action.reservation = \u0417\u0430\u0440\u0435\u0437\u0435\u0440\u0432\u0438\u0440\u043E\u0432\u0430\u0442\u044C
 local.error.wrong_login_or_password = \u041D\u0435\u043F\u0440\u0430\u0432\u0438\u043B\u044C\u043D\u044B\u0439 \u043B\u043E\u0433\u0438\u043D \u0438\u043B\u0438 \u043F\u0430\u0440\u043E\u043B\u044C
+local.error.wrong_data = \u0414\u0430\u043D\u043D\u044B\u0435 \u043D\u0435 \u0432\u0435\u0440\u043D\u044B
 local.error.login_is_present = \u041B\u043E\u0433\u0438\u043D \u0443\u0436\u0435 \u0437\u0430\u043D\u044F\u0442
 local.error.login_is_wrong = \u041B\u043E\u0433\u0438\u043D \u0434\u043E\u043B\u0436\u0435\u043D \u0431\u044B\u0442\u044C \u043E\u0442 3 \u0434\u043E 20 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432 1-9 0 A-z _
 local.error.password_is_wrong = \u041F\u0430\u0440\u043E\u043B\u044C \u0434\u043E\u043B\u0436\u0435\u043D \u0431\u044B\u0442\u044C \u043E\u0442 5 \u0434\u043E 20 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432 1-9 0 A-z _
@@ -13,6 +20,26 @@ local.navigate.sign_up_button = \u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430
 local.navigate.my_account = \u041C\u043E\u0439 \u0430\u043A\u043A\u0430\u0443\u043D\u0442
 local.navigate.my_account.menu.profile = \u041F\u0440\u043E\u0444\u0438\u043B\u044C
 local.navigate.my_account.menu.log_out_button = \u0412\u044B\u0439\u0442\u0438
+local.navigate.authorised.rooms= \u041F\u0440\u043E\u0441\u043C\u043E\u0442\u0440 \u0441\u043F\u0438\u0441\u043A\u0430 \u043A\u043E\u043C\u043D\u0430\u0442
+local.navigate.authorised.room_menu.add_room_button= \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043D\u043E\u043C\u0435\u0440
+local.navigate.authorised.room_menu.remove_room_button = \u0423\u0431\u0440\u0430\u0442\u044C \u043D\u043E\u043C\u0435\u0440 \u0438\u0437 \u043F\u0435\u0440\u0435\u0447\u043D\u044F \u0434\u043E\u0441\u0442\u0443\u043F\u043D\u044B\u0445
+local.navigate.authorised.room_menu.change_room_button = \u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u0438\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044E \u043E \u043D\u043E\u043C\u0435\u0440\u0435
+local.apartment_params.apartment_type = \u0422\u0438\u043F \u043D\u043E\u043C\u0435\u0440\u0430
+local.apartment_params.number_of_beds = \u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u043A\u0440\u043E\u0432\u0430\u0442\u0435\u0439
+local.apartment_params.number_of_rooms = \u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u043A\u043E\u043C\u043D\u0430\u0442
+local.navigate.admin.set_room_parameters_button = \u0423\u0442\u0430\u043D\u043E\u0432\u0438\u0442\u044C \u043F\u0430\u0440\u0430\u043C\u0435\u0442\u0440\u044B \u043A\u043E\u043C\u043D\u0430\u0442
+local.navigate.user.shopping_cart = \u041A\u043E\u0440\u0437\u0438\u043D\u0430
+local.apartment.apartment_number = \u041D\u043E\u043C\u0435\u0440 \u0430\u043F\u0430\u0440\u0442\u0430\u043C\u0435\u043D\u0442\u043E\u0432
+local.apartment.floor = \u042D\u0442\u0430\u0436
+local.apartment.number_of_beds = \u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u043A\u0440\u043E\u0432\u0430\u0442\u0435\u0439
+local.apartment.apartment_type = \u0422\u0438\u043F \u043A\u043E\u043C\u043D\u0430\u0442\u044B
+local.apartment.balcony = \u041D\u0430\u043B\u0438\u0447\u0438\u0435 \u0431\u0430\u043B\u043A\u043E\u043D\u0430
+local.apartment.number_of_rooms = \u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u043A\u043E\u043C\u043D\u0430\u0442
+local.apartment.price = \u0426\u0435\u043D\u0430 \u0437\u0430 \u0434\u0435\u043D\u044C
+local.order.beginning_date = \u0414\u0430\u0442\u0430 \u043D\u0430\u0447\u0430\u043B\u0430
+local.order.end_date = \u0414\u0430\u0442\u0430 \u043A\u043E\u043D\u0446\u0430
+local.order.status = \u0421\u0442\u0430\u0442\u0443\u0441
+local.order.price = \u0426\u0435\u043D\u0430
 local.user.login = \u041B\u043E\u0433\u0438\u043D
 local.user.password = \u041F\u0430\u0440\u043E\u043B\u044C
 local.user.password2 = \u041F\u043E\u0432\u0442\u043E\u0440\u0438\u0442\u0435 \u043F\u0430\u0440\u043E\u043B\u044C
