--- a/src/main/resources/local.properties
+++ b/src/main/resources/local.properties
@@ -6,6 +6,7 @@ local.action.edit = \u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C
 local.action.delete = \u0423\u0434\u0430\u043B\u0438\u0442\u044C
 local.action.select = \u0412\u044B\u0431\u0440\u0430\u0442\u044C
 local.action.reservation = \u0417\u0430\u0440\u0435\u0437\u0435\u0440\u0432\u0438\u0440\u043E\u0432\u0430\u0442\u044C
+local.action.confirm_payment = \u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044C \u043E\u043F\u043B\u0430\u0442\u0443
 local.error.wrong_login_or_password = \u041D\u0435\u043F\u0440\u0430\u0432\u0438\u043B\u044C\u043D\u044B\u0439 \u043B\u043E\u0433\u0438\u043D \u0438\u043B\u0438 \u043F\u0430\u0440\u043E\u043B\u044C
 local.error.wrong_data = \u0414\u0430\u043D\u043D\u044B\u0435 \u043D\u0435 \u0432\u0435\u0440\u043D\u044B
 local.error.login_is_present = \u041B\u043E\u0433\u0438\u043D \u0443\u0436\u0435 \u0437\u0430\u043D\u044F\u0442
@@ -28,6 +29,7 @@ local.apartment_params.apartment_type = \u0422\u0438\u043F \u043D\u043E\u043C\u0
 local.apartment_params.number_of_beds = \u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u043A\u0440\u043E\u0432\u0430\u0442\u0435\u0439
 local.apartment_params.number_of_rooms = \u041A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u043A\u043E\u043C\u043D\u0430\u0442
 local.navigate.admin.set_room_parameters_button = \u0423\u0442\u0430\u043D\u043E\u0432\u0438\u0442\u044C \u043F\u0430\u0440\u0430\u043C\u0435\u0442\u0440\u044B \u043A\u043E\u043C\u043D\u0430\u0442
+local.navigate.admin.orders_button = \u0421\u043F\u0438\u0441\u043E\u043A \u0437\u0430\u043A\u0430\u0437\u043E\u0432
 local.navigate.user.shopping_cart = \u041A\u043E\u0440\u0437\u0438\u043D\u0430
 local.apartment.apartment_number = \u041D\u043E\u043C\u0435\u0440 \u0430\u043F\u0430\u0440\u0442\u0430\u043C\u0435\u043D\u0442\u043E\u0432
 local.apartment.floor = \u042D\u0442\u0430\u0436
