tests, new func, fix
dao tests

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -3,3 +3,4 @@ db.url = jdbc:mysql://localhost:3306/jwd_hostel?useSSL=false&serverTimezone=UTC
 db.user = root
 db.password = root
 db.poolSize = 5
+db.test.url = jdbc:mysql://localhost:3306/jwd_hostel_test?useSSL=false&serverTimezone=UTC
